# SaitekRadio

./: .gitignore  55-saitek.rules  55-saitekpanels.conf  BUILDING.md  CHANGELOG.md  INSTALL  LICENCE  LICENCE.md  Makefile  README.md  saitek_technical_specifications  saitekradio  saitekradio.nas  saitekradio.xml  startup.bat
code/saitekradio/: Cargo.toml  Makefile
code/saitekradio/radio_constants/: Cargo.toml
code/saitekradio/radio_constants/src/: lib.rs
code/saitekradio/radio_device/: Cargo.toml
code/saitekradio/radio_device/src/: lib.rs
code/saitekradio/saitekradio/: Cargo.toml
code/saitekradio/saitekradio/src/: main.rs
code/saitekradio/simulator/: Cargo.toml
code/saitekradio/simulator/src/: lib.rs
code/saitekradio/src/: main.rs
code/src/: main.rs  radio_constants.rs  radio_device.rs  simulator.rs
