[workspace]
# use 
#    RUSTFLAGS="--cfg piped" cargo build
# for the piped version

members = [
    "saitekradio",
    "radio_constants",
    "radio_device",
    "simulator",
]

resolver = "2"

[workspace.dependencies]
hidapi = "1.2.5"

[workspace.package]
version = "2.2.0"
authors = ["Dave Attwood <dave@attwoods.org.uk>"]
description = "Driver for Saitek Radio to connect to FGFS"
edition = "2021"
rust-version = "1.65"

[profile.release]
panic = 'abort'

